[gd_scene load_steps=8 format=3 uid="uid://41r7tnp8xgu0"]

[ext_resource type="Script" path="res://Scripts/Inventory, Items, Weapons and related UI/WeaponScripts/WeaponItemBehaviour.gd" id="1_8qbgj"]
[ext_resource type="Texture2D" uid="uid://dwbh36c8xrcss" path="res://Assets/Effects/Glow/PickupItemGlow.png" id="2_gwhlp"]
[ext_resource type="Shader" path="res://Assets/Materials/ColourChange.gdshader" id="2_k1t5b"]
[ext_resource type="Texture2D" uid="uid://b5gma44yobxuw" path="res://Assets/Items/Weapons/FloorIcons/Bow.png" id="2_lvtle"]
[ext_resource type="Texture2D" uid="uid://bgkjghij62v6q" path="res://Assets/Effects/ButtonPrompt/X Prompt.png" id="4_rpfkj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ukp6l"]
shader = ExtResource("2_k1t5b")
shader_parameter/custom_color = Color(0.666667, 0.352941, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_qidj3"]
radius = 21.0

[node name="WeaponTemplate" type="Node2D"]

[node name="WeaponArea" type="Area2D" parent="."]
z_index = 5
collision_layer = 16
script = ExtResource("1_8qbgj")

[node name="WeaponItemSprite2D" type="Sprite2D" parent="WeaponArea"]
z_index = 4
material = SubResource("ShaderMaterial_ukp6l")
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_lvtle")

[node name="WeaponItemCollision2D" type="CollisionShape2D" parent="WeaponArea"]
z_index = 5
shape = SubResource("CircleShape2D_qidj3")

[node name="GlowEffectWeapon" type="Sprite2D" parent="WeaponArea"]
z_index = 3
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_gwhlp")

[node name="ButtonPromptWeapon" type="Sprite2D" parent="WeaponArea"]
z_index = 20
position = Vector2(15, -18)
texture = ExtResource("4_rpfkj")

[connection signal="body_entered" from="WeaponArea" to="WeaponArea" method="_on_body_entered"]
[connection signal="body_exited" from="WeaponArea" to="WeaponArea" method="_on_body_exited"]
